; ModuleID = '/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn-cgroup.c_mount_systemd_cgroup_writable_one.c'
source_filename = "/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn-cgroup.c_mount_systemd_cgroup_writable_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_ERR = common dso_local global i32 0, align 4
@MS_BIND = common dso_local global i32 0, align 4
@MS_REMOUNT = common dso_local global i32 0, align 4
@MS_NOSUID = common dso_local global i32 0, align 4
@MS_NOEXEC = common dso_local global i32 0, align 4
@MS_NODEV = common dso_local global i32 0, align 4
@MS_RDONLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @mount_systemd_cgroup_writable_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mount_systemd_cgroup_writable_one(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @assert(i8* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @assert(i8* %9)
  %11 = load i32, i32* @LOG_ERR, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* @MS_BIND, align 4
  %15 = call i32 @mount_verbose(i32 %11, i8* %12, i8* %13, i32* null, i32 %14, i32* null)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  store i32 %19, i32* %3, align 4
  br label %35

20:                                               ; preds = %2
  %21 = load i32, i32* @LOG_ERR, align 4
  %22 = load i8*, i8** %4, align 8
  %23 = load i32, i32* @MS_BIND, align 4
  %24 = load i32, i32* @MS_REMOUNT, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @MS_NOSUID, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @MS_NOEXEC, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @MS_NODEV, align 4
  %31 = or i32 %29, %30
  %32 = load i32, i32* @MS_RDONLY, align 4
  %33 = or i32 %31, %32
  %34 = call i32 @mount_verbose(i32 %21, i8* null, i8* %22, i32* null, i32 %33, i32* null)
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %20, %18
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @mount_verbose(i32, i8*, i8*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
